[project]
name = "agilly1989_motorway"
description = "CURRENTLY IN ACTIVE DEVELOPMENT (BETA)! IF THINGS BREAK ITS BECAUSE I BROKE IT.... This my implemenation of a `pipe` in ComfyUI. Is it better or worse than others? No idea. (also has some utility nodes)"
version = "1.1.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/agilly1989/ComfyUI_agilly1989_motorway"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "agilly1989"
DisplayName = "ComfyUI_agilly1989_motorway"
Icon = ""
